# grpc-test

./: grpctest.code-workspace
grpctest-c#-client/: Program.cs  grpctest-c#-client.csproj  grpctest-c#-client.sln
grpctest-proto/: helloworld.proto
grpctest-rust-client/: Cargo.toml  build.rs
grpctest-rust-client/src/: main.rs
grpctest-rust-server/: Cargo.toml  build.rs
grpctest-rust-server/src/: main.rs
