[package]
name = "grpctest-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.11", features = ["gzip"] }
prost = "0.12"
tokio = { version = "1.0", features = ["full"]}

[build-dependencies]
tonic-build = "0.11"